--- a/index.html
+++ b/index.html
@@ -1,51 +1,60 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Bestarabicwebsites by elhoucine</title>
+<!DOCTYPE html>
+<html dir="rtl" lang="he">
+<head>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/ripples.css" rel="stylesheet">
+    <link href="css/material.css" rel="stylesheet">
+    <link href="css/material-wfont.css" rel="stylesheet">
+    <link href="css/material/snackbar.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Bestarabicwebsites</h1>
-        <p>أفضل المواقع العربية</p>
+    <meta charset="UTF-8">
+    <title>أفضل المواقع العربية.</title>
+</head>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 head">
+                <h1 class="text-center title">مشروع أفضل المواقع العربية.</h1>
+                <p class="text-center">
+                    عبارة عن مكتبة مرتبة لأفضل المواقع العربية. يمكن لأي شخص تحميلها و الاستفادة منها.
+                </p>
+<!--                 <a href="#" class="btn  btn-primary">الهدف من المشروع</a>
+                <a href="#" class="btn  btn-primary">لمادا مساهمتك مهمة</a>
+                <a href="#" class="btn  btn-primary">الفوائد</a> -->
+            </div>
+        </div>
 
-        <p class="view"><a href="https://github.com/elhoucine/BestArabicWebsites">View the Project on GitHub <small>elhoucine/BestArabicWebsites</small></a></p>
 
-
-        <ul>
-          <li><a href="https://github.com/elhoucine/BestArabicWebsites/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/elhoucine/BestArabicWebsites/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/elhoucine/BestArabicWebsites">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>
-<a id="مشروع-أفضل-المواقع-العربية" class="anchor" href="#%D9%85%D8%B4%D8%B1%D9%88%D8%B9-%D8%A3%D9%81%D8%B6%D9%84-%D8%A7%D9%84%D9%85%D9%88%D8%A7%D9%82%D8%B9-%D8%A7%D9%84%D8%B9%D8%B1%D8%A8%D9%8A%D8%A9" aria-hidden="true"><span class="octicon octicon-link"></span></a>مشروع أفضل المواقع العربية</h3>
-
-<p>عبارة عن مساهمات من أشخاص يتصفحون المواقع العربية و قد يعجبون ببعضها. الهدف هو توفير مكتبة غنية بأفضل المواقع و التي يمكن تحميلها و استخدام البيانات بسهولة.</p>
-
-<p>لتحميل المكتبة على الحاسوب و المساهمة :</p>
-
-<pre><code>$ git clone https://github.com/elhoucine/BestArabicWebsites
-</code></pre>
-
-<p>شكرا</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/elhoucine">elhoucine</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
+        <div class="row body">
+                <div class="col-sm-4">
+                    <div class="explain lead">
+                        <h1 class="text-center">3</h1>
+                        أرسل.
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="explain lead">
+                        <h1 class="text-center">2</h1>
+                        أضف مواقعك المفضلة.
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="explain lead">
+                        <h1 class="text-center">1</h1>
+                        <a href="https://github.com/elhoucine/BestArabicWebsites">إنسخ المشروع.</a>
+                    </div>
+                </div>
+            </div>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+
+    <footer class="text-center">
+        <a href="https://github.com/elhoucine/BestArabicWebsites">أفضل المواقع العربية.</a>
+    </footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/material.js"></script>
+
+</body>
 </html>
